--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,21 @@
 	<properties>
 		<java.version>17</java.version>
 		<dummy4j.version>0.9.0</dummy4j.version>
+		<keycloak-adapter.version>16.1.1</keycloak-adapter.version>
 	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.keycloak.bom</groupId>
+				<artifactId>keycloak-adapter-bom</artifactId>
+				<version>${keycloak-adapter.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<!-- Spring Boot misc. -->
 		<dependency>
@@ -24,6 +38,13 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<!-- END of Spring Boot misc. -->
+
+		<!-- Security -->
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-spring-boot-starter</artifactId>
+		</dependency>
+		<!-- END of Security -->
 
 		<!-- Tests -->
 		<dependency>
