--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+keycloak.realm=keep-growing
+keycloak.resource=spring-boot-example-app
+keycloak.auth-server-url=http://127.0.0.1:8024/auth
+keycloak.ssl-required=external
+keycloak.bearer-only=true
