--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ springdoc.swagger-ui.csrf.enabled=true
 
 keycloak.realm=keep-growing
 keycloak.resource=spring-boot-example-app
-keycloak.auth-server-url=http://127.0.0.1:8024/auth
+keycloak.auth-server-url=http://localhost:8024/auth
 keycloak.ssl-required=external
 keycloak.bearer-only=true
 keycloak.credentials.secret=QjLCjk1I9sugcZSDFCsyAkoLOqAHDLKC
